--- a/src/gtk-3.0/3.18/gtk.css
+++ b/src/gtk-3.0/3.18/gtk.css
@@ -3157,11 +3157,11 @@ ClockBox {
     background-color: rgba(57, 57, 57, 0);
     border-radius: 0; }
     .xfce4-panel.panel .button.flat:hover, .xfce4-panel.panel .sidebar-button.button:hover {
-      border: none;
+      border-color: rgba(0, 0, 0, 0);
       background-color: #535353; }
     .xfce4-panel.panel .button.flat:active, .xfce4-panel.panel .sidebar-button.button:active, .xfce4-panel.panel .button.flat:checked, .xfce4-panel.panel .sidebar-button.button:checked {
       color: #9ab87c;
-      border: none;
+      border-color: rgba(0, 0, 0, 0);
       background-color: #272727; }
 
 .floating-bar {
